small alignment fix for privacy checkbox (bug 658665)
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@89742 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/channel.css
+++ b/style/covehead/channel.css
@@ -358,6 +358,7 @@
 #newsletter-signup .privacy-field .error-wrapper {
     padding: 0;
     margin: 0;
+    margin-top: 2px;
 }
 
 .error-privacy #newsletter-signup .privacy-field .error-wrapper {
@@ -366,6 +367,8 @@
 
 #privacy-check-label {
     font-size: .9em;
+    margin: 0;
+    padding: 0;
 }
 
 #newsletter-signup .channels_signup {
